Fix name resolving for neo4j service in chart

--- a/hw3/users-service-chart/templates/config.yaml
+++ b/hw3/users-service-chart/templates/config.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: users-service-config
 data:
-  NEO4J_BOLT_URI: {{ printf "bolt://%s" .Values.externalNeo4j.neo4jhost }}
+  NEO4J_BOLT_URI: {{ printf "bolt://%s" (include "neo4j.fullname" .) }}
   NEO4J_USER: {{ printf "%s" .Values.externalNeo4j.neo4juser }}
 ---
 apiVersion: v1
